fix: add overflow auto to backgrounds list

--- a/chat/src/components/Chat/ChatSettings/ChatSettings.scss
+++ b/chat/src/components/Chat/ChatSettings/ChatSettings.scss
@@ -35,6 +35,7 @@
       padding: 0;
       margin: 0;
       flex-wrap: wrap;
+      overflow: auto;
 
       li {
         margin: 10px;
